--- a/style.css
+++ b/style.css
@@ -31,6 +31,16 @@ h2 {
   bottom: 0;
   z-index: 9999;
 }
+.my-label {
+  background-color: transparent !important;
+  color: red !important; /* Altere a cor do texto conforme necessário */
+  font-size: 14px !important; /* Altere o tamanho da fonte conforme necessário */
+  font-weight: bold !important; /* Altere a espessura da fonte conforme necessário */
+  text-align: center !important; /* Alinhe o texto conforme necessário */
+  background-color: transparent !important;
+  border: none !important;
+  box-shadow: none !important;
+}
 
 /* Estilo para o botão */
 .utfpr-button {
