--- a/style.css
+++ b/style.css
@@ -1,3 +1,69 @@
+body {
+  font-family: 'Lato', sans-serif;
+}
+.leaflet-top {
+  top: 600px !important;
+}
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+.list-group.panel > .list-group-item {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
+}
+/* Add .accordion-flush to remove the default background-color, some borders, and some rounded corners to render accordions edge-to-edge with their parent container. */
+
+.accordion-flush .accordion-item {
+  background-color: #fff;
+}
+
+.accordion-button {
+  background-color: #8d2626;
+  color: #212218;
+}
+#mapid {
+  height: 98.9vh;
+  width: 98.9vw;
+  z-index: 0;
+}
 /* Style with blue h1 */
 h1 {
   color: #2196f3;
@@ -85,4 +151,48 @@ h2 {
 .leaflet-popup-close-button {
   margin-top: 3px !important;
   color: #212218 !important;
+}
+
+.openbtn {
+  font-size: 30px;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  left: 30px;
+}
+
+body {
+  position: relative;
+}
+
+.search-container {
+  position: absolute;
+  top: 20px;
+  left: 90px;
+  z-index: 9999;
+}
+
+#search-input {
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+#search-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: none;
+  background-color: #4caf50;
+  color: white;
+  cursor: pointer;
+}
+
+#search-button:hover {
+  background-color: #45a049;
+}
+
+#search-results {
+  margin-top: 20px;
 }
