--- a/style.css
+++ b/style.css
@@ -197,3 +197,63 @@ body {
 #search-results {
   margin-top: 20px;
 }
+
+/* search-response deixar destacado acima de tudo no canto inferior esquedo */
+.search-response {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  z-index: 999;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  max-width: 300px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-image {
+  max-width: 100%;
+  height: auto;
+}
+
+.modal-image-floor {
+  max-width: 100%;
+  height: auto;
+  margin-top: 20px;
+}
