--- a/style.css
+++ b/style.css
@@ -64,12 +64,30 @@ body {
   margin-left: 100px;
 }
 
-@media screen and (max-height: 450px) {
+@media screen and (max-width: 450px) {
   .sidenav {
     padding-top: 15px;
   }
   .sidenav a {
     font-size: 18px;
+  }
+
+  #modal {
+    max-width: 350px !important;
+    min-height: 400px;
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 50% !important;
+    top: 54% !important;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    max-height: 80vh;
+    background-color: #fefefe;
+    padding: 20px;
+    border: 1px solid #888;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    overflow: auto;
   }
 }
 
